--- a/scss/base/_index.scss
+++ b/scss/base/_index.scss
@@ -2,7 +2,9 @@
 // Base Index //
 ////////////////
 
+@import "variables";
 @import "reset";
-@import "typography";
-@import "colors";
 @import "base";
+@import "colors";
+@import "typography";
+
