--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -10,8 +10,7 @@
 $base-font-family: 'Roboto', sans-serif;
 $base-font-size: 16px;
 $base-line-height: 1.5;
-$heading-font-family: 'Georgia', serif;
-$link-hover-color: darken($link-color, 10%);
+$link-hover-color: lighten($link-color, 10%);
 $paragraph-margin-bottom: 1em;
 
 
@@ -32,7 +31,7 @@ body {
 // -------- //
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: $heading-font-family;
+  font-family: $base-font-family;
   color: $heading-color;
   margin-bottom: 0.5em;
   line-height: 1.2;
