--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -29,3 +29,12 @@
     }
   }
   
+  // Center Absolute //
+
+  @mixin center-absolute($top: 50%, $left: 50%) {
+    text-align: center;
+    position: absolute;
+    top: $top;
+    left: $left;
+    transform: translate(-50%, -50%);
+  }
