--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -2,41 +2,59 @@
 // Hero Banner //
 // ----------- //
 
-.header__hero {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    white-space: nowrap;
-    position: relative;
-    width: 100%;
-    height: 100vh; 
-    overflow: hidden;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/assets/img/hero-image.jpg');
+        .header__hero {
+            display: flex;
+            flex-direction: column;
+            flex-wrap: nowrap;
+            white-space: nowrap;
+            position: relative;
+            width: 100%;
+            height: 100vh; 
+            overflow: hidden;
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/assets/img/hero-image.jpg');
 
-    &--h1 {
-        font-size: 2rem;
-        color: $secondary-text-color;
-        text-shadow: 1px 1px $background-color;
-       @include center-absolute(30%, 50%);
-       
-    }
+            &--h1 {
+                font-size: 2rem;
+                line-height: 2.25rem;
+                letter-spacing: 1.5px;
+                color: $secondary-text-color;
+                text-shadow: 1px 1px $background-color;
+            @include center-absolute(30%, 50%);
+            
+            }
 
-    &--h2 {
-        font-size: 1.25rem;
-        color: $secondary-text-color;
-        text-shadow: 1px 1px $background-color;
-        @include center-absolute(39%, 50%);
-        
-    }
-}
+            &--h2 {
+                font-size: 1.25rem;
+                letter-spacing: 1.25px;
+                color: $secondary-text-color;
+                text-shadow: 1px 1px $background-color;
+                @include center-absolute(39%, 50%);
+                
+            }
+        }
 
-.header__down {
-    font-size: 0.75rem;
-    font-weight: 500;
-    line-height: 1.25rem;
-    color: $secondary-text-color;
-    @include center-absolute(90%, 50%);
-}
+        .header__down {
+            font-size: 0.75rem;
+            font-weight: 500;
+            line-height: 1.25rem;
+            color: darken($secondary-text-color, 5%);
+            
+            justify-content: left;
+            @include center-absolute(90%, calc((100vw - 50%) - 32px));
+            animation: bounce 3s infinite;
+            @keyframes bounce {
+                0%, 20%, 50%, 80%, 100% {
+                    transform: translateY(0);
+                }
+                40% {
+                    transform: translateY(-10px);
+                }
+                60% {
+                    transform: translateY(-5px);
+                }
+            }
+
+        }
