--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -14,6 +14,7 @@ html, body {
   height: 100%;
   background-color: $background-color;
   
+  
 }
 
 img {
@@ -22,9 +23,16 @@ img {
   display: block;
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
 #wrapper {
     max-width: 100vw;
     max-height: 100vh;
-    overflow: hidden;
+    overflow-x: hidden;
+    scroll-behavior: smooth;
+    
 }
 
