--- a/scss/components/_projects.scss
+++ b/scss/components/_projects.scss
@@ -2,22 +2,45 @@
 // Projects //
 // -------- //
 
-
-
-.portfolio__grid {
+.portfolio__container {
     display: flex;
-    flex-direction: column;
-    gap: 20px;
-    max-width: 368px;
-    margin: 0 auto; 
-    padding: 10px;
 
-        &--card {
-            background-color: $background-color;
-            padding: 15px;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            text-align: center;
-        }
+
+    .portfolio__grid {
+        height: 100%;
+        width: 100vw;
+        display: flex;
+        flex-direction: column;
+        scroll-snap-align: start;
+        gap: 20px;
+        max-width: 100%;
+        margin: 0 auto; 
+        padding: 10px;
+    
+       
+
+            .portfolio__grid--card {
+                align-content: center;
+                background-color: $secondary-color;
+                padding: 15px;
+                border-radius: 8px;
+                box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+                font-family: $base-font-family;
+                color: $background-color;
+                text-align: center;
+                line-height: 1.5rem;
+
+                h3{
+                    font-size: 1.5rem;
+                }
+        
+                a {
+                    font-size: .75rem;
+                }
+
+             
+            }
+
+    }
 
 }
