--- a/scss/components/_contact.scss
+++ b/scss/components/_contact.scss
@@ -8,24 +8,101 @@
     height: 100vh;
     width: 100%;
     margin: 20px 20px;
+    margin-bottom: 0;
     background-color: $background-color;
     color: $text-color;
     font-family: $base-font-family;
 
     h2 {
         font-size: 2rem;
-        line-height: 3rem;
+        line-height: 4rem;
         letter-spacing: 0.1rem;
     }
 
-    i {
-        font-size: 1.5rem;
-    }
-
     span {
-        font-size: 1.5rem;
+        display: flex;
+        flex-direction: row;
+        justify-content: left;
+        line-height: 2rem;
+        gap: 5px;
+        margin-bottom: 10px;
     }
 
+    .icon__phone > i {
+        font-size: 3rem;
+    }
+
+    .icon__email > i {
+        font-size: 3rem;
+    }
+
+    .contact__form {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+       
+
+        .form {
+            display: flex;
+            flex-direction: column; 
+            max-height: 100%;
+            gap: 5px; 
+            padding: 10px; 
+            background-color: $background-color; 
+            border-radius: 8px; 
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); 
+           
+            input {
+                padding: 10px; 
+                font-size: 1rem; 
+                border: 1px solid $text-color; 
+                border-radius: 4px;
+                color: $text-color; 
+            }
+
+            button {
+                position: relative;
+                left: calc(50% - 50px);
+                width: 100px;
+                padding: 10px 20px;
+                font-size: 1rem; 
+                color: $background-color; 
+                background-color: $text-color; 
+                border: none; 
+                border-radius: 4px; 
+                cursor: pointer; 
+                transition: background-color 0.3s ease; 
+            }
+
+        }
+    }
+
+    .footer__top {
+        display: flex;
+        flex-direction: column;
+        align-self: center;
+        font-size: 0.75rem;
+        font-weight: 500;
+        line-height: 0.25rem;
+        color: darken($text-color, 5%);
+        animation: bounce 3s infinite;
+
+            i {
+                justify-self: center;
+            }
+
+        @keyframes bounce {
+            0%, 20%, 50%, 80%, 100% {
+                transform: translateY(0);
+            }
+            40% {
+                transform: translateY(-10px);
+            }
+            60% {
+                transform: translateY(-5px);
+            }
+        }
+    }
 
 
 }
