--- a/scss/components/_contact.scss
+++ b/scss/components/_contact.scss
@@ -5,10 +5,10 @@
 .contact__container {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    scroll-snap-align: start;
+    height: 100%;
     width: 100%;
     margin: 20px 20px;
-    margin-bottom: 0;
     background-color: $background-color;
     color: $text-color;
     font-family: $base-font-family;
@@ -40,6 +40,7 @@
         display: flex;
         justify-content: center;
         width: 100%;
+        margin: auto;
        
 
         .form {
@@ -86,6 +87,7 @@
         line-height: 0.25rem;
         color: darken($text-color, 5%);
         animation: bounce 3s infinite;
+        margin-top: 10%;
 
             i {
                 justify-self: center;
