--- a/scss/components/_projects.scss
+++ b/scss/components/_projects.scss
@@ -4,14 +4,15 @@
 
 .portfolio__container {
     display: flex;
+    margin: 20px 20px;
+    scroll-snap-align: start;
 
 
     .portfolio__grid {
         height: 100%;
-        width: 100vw;
+        width: 100%;
         display: flex;
         flex-direction: column;
-        scroll-snap-align: start;
         gap: 20px;
         max-width: 100%;
         margin: 0 auto; 
@@ -42,5 +43,32 @@
             }
 
     }
-
 }
+    .portfolio__down {
+        display: flex;
+        flex-direction: column; 
+        align-items: center; 
+        justify-content: center; 
+        height: 100%; 
+        text-align: center; 
+        margin-top: 20px;
+        font-size: 0.75rem;
+        font-weight: 500;
+        line-height: 0.5rem;
+        color: darken($secondary-text-color, 5%);
+       
+        animation: bounce 3s infinite;
+        @keyframes bounce {
+            0%, 20%, 50%, 80%, 100% {
+                transform: translateY(0);
+            }
+            40% {
+                transform: translateY(-10px);
+            }
+            60% {
+                transform: translateY(-5px);
+            }
+        }
+
+    }
+
