--- a/scss/base/_colors.scss
+++ b/scss/base/_colors.scss
@@ -4,8 +4,8 @@
 
 $primary-color: #355952;
 $secondary-color: #EAB63E;
-$text-color: #355952;
+$text-color: #0c0d0d;
 $secondary-text-color: #E37769;
-$background-color: #F9F6E7;
+$background-color: #B7B9A8;
 $heading-color: darken($text-color, 10%);
 $link-color: lighten($text-color, 10%);
