--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -7,8 +7,8 @@
     @include center-absolute(35px, 35px);
     z-index: 10;
     font-size: 3rem;
-    color: $secondary-text-color;
-    text-shadow: 2px 2px $background-color;
+    color: $primary-color;
+    text-shadow: 3px 3px darken($primary-color, 20%);
     cursor: pointer;
 }
 
