--- a/scss/components/_contact.scss
+++ b/scss/components/_contact.scss
@@ -44,13 +44,60 @@
         }
     }
 
+    .contact__form {
+        position: absolute;
+        top: -150px;
+        left: calc(50% - 200px);
+        width: 100%;
+        max-width: 400px;
+        margin-bottom: 500px;
+        padding: 20px;
+        box-shadow: $box-shadow;
+        border-radius: 8px;
+        background-color: $background-color;
     
+        .form {
+            input[type="text"],
+            input[type="email"],
+            textarea {
+                width: 100%;
+                padding: 12px 15px;
+                margin-bottom: 15px;
+                border: 1px solid $primary-color;
+                border-radius: 5px;
+                box-sizing: border-box;
+                font-size: 16px;
+    
+                &::placeholder {
+                    color: #999999;
+                }
+            }
+    
+            button {
+                width: 100%;
+                padding: 12px;
+                background-color: $text-color;
+                border: none;
+                border-radius: 6px;
+                color: $background-color;
+                font-size: 16px;
+                cursor: pointer;
+                margin-top: 10px;
+    
+                &:hover {
+                    background-color: lighten($text-color, 50%);
+                }
+            }
+        }
+    }
+
+
 
 
     .footer__top {
         position: absolute; 
-        bottom: 0px;
-        left: 0px;  
+        bottom: -390px;
+        left: 0;  
         width: 100%;
         text-align: center;
         font-size: 1.5rem;
