--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -14,6 +14,10 @@
             background-position: center;
             background-repeat: no-repeat;
             
+            @include respond-to(md) {
+                width: calc(100% - 150px);
+                margin-left: 150px;
+            }
 
            img {
             position: absolute;
@@ -24,6 +28,9 @@
         }
 
         .header__down {
+            @include respond-to(md) {
+                display: none;
+            }
             position: absolute;
             bottom: 20px;
             left: calc(50% - 48px);
