--- a/scss/components/_projects.scss
+++ b/scss/components/_projects.scss
@@ -51,9 +51,26 @@
              
             }
 
+        @include respond-to(md) {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr); 
+            grid-template-rows: repeat(3, 1fr);  
+            gap: 20px;
+            width: calc(100% - 150px);
+            margin-left: 150px;
+
+            .project__grid--card {
+                width: 100%;  
+                height: 100%; 
+              }
+        }    
+
     }
 
     .project__down {
+        @include respond-to(md) {
+            display: none;
+        }
         position: absolute; 
         bottom: -100px;
         left: 0px;  
