--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -37,9 +37,9 @@
             text-align: center;
             font-family: $base-font-family;
             font-size: 1.25rem;
-            font-weight: 500;
+            font-weight: 700;
             line-height: 1.25rem;
-            color: $primary-color;
+            color: darken($primary-color, 10%);
             animation: bounce 3s infinite;
             @keyframes bounce {
                 0%, 20%, 50%, 80%, 100% {
