--- a/scss/base/_colors.scss
+++ b/scss/base/_colors.scss
@@ -2,8 +2,8 @@
 // Colours //
 /////////////
 
-$primary-color: #355952;
-$secondary-color: #EAB63E;
+$primary-color: darken(#879e82, 10%);
+$secondary-color: #7d6b57;
 $text-color: #0c0d0d;
 $secondary-text-color: #E37769;
 $background-color: #B7B9A8;
