--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -8,12 +8,17 @@ nav {
 
 .sidebar__burger {
     display: block;
-    @include center-absolute(35px, 35px);
+    @include center-absolute(35px, calc(100% - 55px));
     z-index: 10;
     font-size: 3rem;
     color: $primary-color;
     text-shadow: 3px 3px darken($primary-color, 20%);
     cursor: pointer;
+
+    &:hover {
+        color: darken($primary-color, 20%);
+        text-shadow: 3px 3px $primary-color;
+    }
 
     @include respond-to(md) {
         display: none;
@@ -41,12 +46,18 @@ nav {
         z-index: 1000;
 
         .sidebar__logo { 
-            padding: 10px 10px;
             margin: 0 auto;
-            border: 3px solid $text-color;
+            border: 1px solid $text-color;
             border-radius: 50%;
-            font-size: 2rem;
-            color: $text-color;
+            // border-top: 3px solid $text-color;
+            // border-bottom: 3px solid $text-color;
+            
+            
+            
+           
+
+            
+         
         }
 
         .sidebar__links {
@@ -58,6 +69,7 @@ nav {
             text-transform: uppercase;
             line-height: 1.25rem;
             letter-spacing: 2px;
+            color: $text-color;
 
             li {
                 margin-bottom: 15px;
@@ -81,11 +93,11 @@ nav {
 
             i {
                 margin-right: 10px;
-                color: $text-color;
+                color: darken($primary-color, 10%);
                 font-size: 1.75rem;
 
                 &:hover{
-                    color: lighten($text-color, 25%);
+                    color: lighten($primary-color, 10%);
             }
 
             a {
