--- a/scss/components/_projects.scss
+++ b/scss/components/_projects.scss
@@ -30,22 +30,25 @@
                 border-radius: 8px;
                 box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
                 font-family: $base-font-family;
-                color: $background-color;
+                color: $text-color;
                 text-align: center;
                 line-height: 1.5rem;
+                text-transform: uppercase;
                 cursor: pointer;
                 transition: transform 0.3s ease, box-shadow 0.3s ease;
 
                 &:hover {
                     transform: translateY(-5px); 
                     box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
+                    background-color: darken($primary-color, 10%);
                 }
                 h3{
-                    font-size: 1.5rem;
+                    font-size: 1.25rem;
+                    letter-spacing: 1px;
                 }
         
-                a {
-                    font-size: .75rem;
+                i {
+                    font-size: 1rem;
                 }
 
              
@@ -74,11 +77,10 @@
         position: absolute; 
         bottom: -100px;
         left: 0px;  
-        // transform: translateX(-50%); 
         width: 100%;
         text-align: center;
         font-size: 1.5rem;
-        color: $primary-color;
+        color: $text-color;
         margin-bottom: 100px;
         animation: bounce 3s infinite;
         @keyframes bounce {
