--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -8,6 +8,7 @@
 // --------- //
 
 $base-font-family: "League Spartan", sans-serif;
+$logo-font: "Abril Fatface", serif;
 $base-font-size: 16px;
 $base-font-weight: 400;
 $base-line-height: 1.5;
