--- a/scss/components/_contact.scss
+++ b/scss/components/_contact.scss
@@ -78,11 +78,20 @@
                 border: 2px solid $primary-color;
                 border-radius: 3px;
                 box-sizing: border-box;
-                font-size: 16px;
+                font-size: 1em;
+                font-family: $base-font-family;
                 background-color: transparent;
+                transition: all 0.3s ease;
     
                 &::placeholder {
                     color: lighten($text-color, 25%);
+                    font-family: $base-font-family;
+                    letter-spacing: 1px;
+                }
+
+                &:focus {
+                    border-color: lighten($primary-color, 10%);
+                    outline: none;
                 }
             }
     
@@ -98,7 +107,8 @@
                 margin-top: 10px;
     
                 &:hover {
-                    background-color: lighten($primary-color, 5%);
+                    background-color: lighten($primary-color, 1%);
+                    color: darken($background-color, 5%);
                 }
             }
         }
@@ -134,6 +144,5 @@
             }
         }
     }
-
-
 }
+
