--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -47,17 +47,15 @@ nav {
 
         .sidebar__logo { 
             margin: 0 auto;
-            border: 1px solid $text-color;
-            border-radius: 50%;
-            // border-top: 3px solid $text-color;
-            // border-bottom: 3px solid $text-color;
-            
-            
-            
-           
+            padding-top: 0px;
+            padding-bottom: 3px;
+            font-family: $logo-font;  
+            font-size: 3rem;
+            font-weight: 800;
+            line-height: 2.5rem;
+            border-top: 2px solid $text-color;
+            border-bottom: 2px solid $primary-color;
 
-            
-         
         }
 
         .sidebar__links {
@@ -106,7 +104,7 @@ nav {
                 font-size: 1rem;
                 display: flex;
                 align-items: center;
-                margin-bottom: 10px;
+                
                
                  }     
             }
