--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -55,7 +55,11 @@ nav {
             line-height: 2.5rem;
             border-top: 2px solid $text-color;
             border-bottom: 2px solid $primary-color;
-
+            
+            // img {
+            //     height: 130px;
+            //     width: 130px;
+            // }
         }
 
         .sidebar__links {
