--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -11,7 +11,7 @@
 }
 
 html, body {
-  height: 100%;
+  min-height: 100vh;
   background-color: $background-color;
   
   
@@ -29,8 +29,9 @@ a {
 }
 
 #wrapper {
-    max-width: 100vw;
-    max-height: 100vh;
+  
+    max-width: 100%;
+    height: 100vh;
     overflow-x: hidden;
     scroll-behavior: smooth;
     
