--- a/scss/components/_contact.scss
+++ b/scss/components/_contact.scss
@@ -22,7 +22,8 @@
         position: relative;
         top: 0;
         left: 20px;
-        font-size: 2.5rem;
+        font-size: 2rem;
+        font-weight: 500;
         line-height: 4rem;
         letter-spacing: 0.1rem;
     }
@@ -127,8 +128,9 @@
         width: 100%;
         margin-top: 0;
         text-align: center;
+        font-family: $base-font-family;
         font-size: 1.25rem;
-        font-weight: 700;
+        font-weight: 500;
         color: $text-color;
        
         animation: bounce 3s infinite;
