--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -6,10 +6,11 @@
             display: flex;
             flex-direction: column;
             flex-wrap: nowrap;
+            flex: 1;
             white-space: nowrap;
             position: relative;
             width: 100%;
-            height: 100vh; 
+            min-height: 100vh; 
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -21,7 +22,7 @@
 
            img {
             position: absolute;
-            top: 100px;
+            top: 145px;
             left: 20px;
             
            }
@@ -37,8 +38,7 @@
             text-align: center;
             font-family: $base-font-family;
             font-size: 1.25rem;
-            font-weight: 700;
-            line-height: 1.25rem;
+            font-weight: 500;
             color: $text-color;
             animation: bounce 3s infinite;
             @keyframes bounce {
