--- a/scss/components/_projects.scss
+++ b/scss/components/_projects.scss
@@ -43,7 +43,8 @@
                     background-color: darken($primary-color, 10%);
                 }
                 h3{
-                    font-size: 1.25rem;
+                    font-size: 1rem;
+                    font-weight: 500;
                     letter-spacing: 1px;
                 }
         
@@ -79,7 +80,8 @@
         left: 0px;  
         width: 100%;
         text-align: center;
-        font-size: 1.5rem;
+        font-size: 1.25rem;
+        font-weight: 500;
         color: $text-color;
         margin-bottom: 100px;
         animation: bounce 3s infinite;
