--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -9,6 +9,7 @@
     margin: 0;
     text-align: center;
     width: 100%;
+    // height: 15px;
     white-space: nowrap;
     font-family: $base-font-family;
     font-size: 0.8rem;
@@ -17,4 +18,9 @@
     background-color: lighten($primary-color, 15%);
     color: $text-color;
     padding: 5px 5px 2px;
+
+    p {
+        margin: 0;
+        padding: 0;
+    }
 }
