--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -24,6 +24,8 @@
             position: absolute;
             top: 145px;
             left: 20px;
+            max-width: 100%;    
+            height: auto;
             
            }
         }
