--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -33,6 +33,7 @@ a {
     max-width: 100%;
     height: 100vh;
     overflow-x: hidden;
+    overflow-y: visible;
     scroll-behavior: smooth;
     
 }
