--- a/scss/components/_projects.scss
+++ b/scss/components/_projects.scss
@@ -61,11 +61,12 @@
             grid-template-rows: repeat(3, 1fr);  
             gap: 20px;
             width: calc(100% - 150px);
+            height: 220px;
             margin-left: 150px;
 
             .project__grid--card {
                 width: 100%;  
-                height: 100%; 
+                height: 100%;
               }
         }    
 
