--- a/scss/base/_colors.scss
+++ b/scss/base/_colors.scss
@@ -5,7 +5,7 @@
 $primary-color: darken(#879e82, 10%);
 $secondary-color: #7d6b57;
 $text-color: #0c0d0d;
-$secondary-text-color: #E37769;
+$secondary-text-color: #e1e3cf;
 $background-color: #B7B9A8;
 $heading-color: darken($text-color, 10%);
 $link-color: lighten($text-color, 10%);
