--- a/scss/pages/_about.scss
+++ b/scss/pages/_about.scss
@@ -4,10 +4,9 @@
 
 
 .about__container {
-    height: 100%;
+    min-height: 100vh;
     width: 100%;
-    position: relative;
-    margin: 20px;
+    margin: 0 auto;
     scroll-snap-align: start;
     background-color: $background-color;
     border-left: 3px solid $primary-color;
@@ -20,56 +19,83 @@
     }
 
     .about__content {
+        display: flex; 
+        flex-direction: column; 
+        align-items: center; 
+        justify-content: center; 
         width: calc(100% - 50px);
-        height: 100%;
-        position: relative;
-        margin-top: 50px;
-        margin-bottom: 20px;
-        margin-left: 20px;
-        margin-right: 20px;
+        margin: 20px;
         font-family: $base-font-family;
         color: $text-color;
 
         .about__image {
+            display: flex; 
+            flex-direction: column; 
+            align-items: flex-start;
+            flex-shrink: 1;
+            flex-wrap: nowrap;
             position: relative;
             width: 100%;
-            top: 20px;
+            margin-top: 50px;
+            margin-bottom: 20px;
+            @include respond-to(md){
+                margin-top: 20px;
+            }
         
             img {
+                width: 100%;
+                height: 300px;
+                object-fit: cover;
                 border-radius: 20px;
-                opacity: 0.6;
+                opacity: 0.8;
+                filter: saturate(0.6);
             }
+
+            h1, h2 {
+                position: absolute;
+                flex-shrink: 1;
+                z-index: 2; 
+                color: $secondary-text-color; 
+                text-shadow: 2px 2px lighten($text-color, 10%);
+                text-transform: uppercase;
+                font-weight: 500;
+                margin: 0; 
+                padding: 10px; 
+                max-width: 75%;
+                
+            }
+
+
+            h1 {
+                top: 230px;
+                left: 0px;
+                font-size: calc(1.2rem + 0.5vw);
+                font-weight: 500;
+                letter-spacing: 1px; 
+               
+            }
+    
+            h2 {
+                top: 255px;
+                left: 0px;
+                font-size: calc(1.7rem + 0.5vw);
+                font-weight: 500;
+                letter-spacing: .5px;
+                
+            }  
         }
         
-     
-        h1 {
-            position: relative;
-            top: -50px;
-            left: 20px;
-            text-transform: uppercase;
-            font-size: 1.4rem;
-            font-weight: 500;
-            letter-spacing: 1px; 
-        }
-
-        h2 {
-            position: relative;
-            top: -55px;
-            left: 20px;
-            text-transform: uppercase;
-            font-size: 1.7rem;
-            font-weight: 500;
-            letter-spacing: .5px;
-        }
-   
         p {
-            position: relative;
+            width: 100%;
             text-align: justify;
-            font-size: 1.2rem;
+            font-size: 1.4rem;
             font-weight: 400;
-            margin-bottom: 20px;
-            top: -30px;
+            padding: 10px;
+            margin-bottom: 20px;  
         }
+      
+   
+     
 
     } 
 
