--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -30,7 +30,7 @@ nav {
     display: none;
 
     @include respond-to(md) {
-        position: absolute;  
+        position: fixed;  
         top: 0;           
         left: 0;          
         width: 150px;    
