--- a/scss/components/_projects.scss
+++ b/scss/components/_projects.scss
@@ -3,72 +3,74 @@
 // -------- //
 
 .project__container {
-    display: flex;
-    position: relative;
+
     margin: 20px 20px;
-    margin-bottom: 100px;
+    margin-bottom: 20px;
     scroll-snap-align: start;
+   
+    h3 {
+        position: relative;
+        font-family: $base-font-family;
+        font-size: 1.7rem;
+        font-weight: 500;
+        letter-spacing: 0.5px;
+        color: $text-color;
+        top: 0;
+        text-align: center;
+        vertical-align: middle;
+        @include respond-to(md) {
+            margin-left: 170px;
+            text-align: left;
+        }
+        
+
+    }
 
 
     .project__grid {
-        height: 100%;
-        width: 100%;
-        display: flex;
-        flex-direction: column;
+        display: grid;
+        align-content: center;
+        justify-content: center;
+        grid-template-columns: repeat(1, 1fr);
+        width: max-content;
         gap: 20px;
-        max-width: 100%;
         margin: 0 auto; 
-        margin-bottom: 60px;
+        margin-bottom: 20px;
         padding: 10px;
-    
+        @include respond-to(md) {
+            grid-template-columns: repeat(3, 1fr); 
+            grid-template-rows: repeat(3, 1fr);  
+            gap: 20px;
+            width: 75vw;
+            margin-left: 150px;
+        }   
        
-
             .project__grid--card {
                 align-content: center;
-                background-color: $primary-color;
-                padding: 15px;
-                border-radius: 8px;
+                background-color: transparent;
+                padding: 0;
+                border-radius: 40px;
                 box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-                font-family: $base-font-family;
-                color: $text-color;
-                text-align: center;
-                line-height: 1.5rem;
-                text-transform: uppercase;
                 cursor: pointer;
                 transition: transform 0.3s ease, box-shadow 0.3s ease;
 
                 &:hover {
                     transform: translateY(-5px); 
-                    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
-                    background-color: darken($primary-color, 10%);
+                    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);  
                 }
-                h3{
-                    font-size: 1rem;
-                    font-weight: 500;
-                    letter-spacing: 1px;
-                }
-        
-                i {
-                    font-size: 1rem;
+                
+                img {
+                    width: 100%;
+                    height: auto;
+                    object-fit: cover;
+                    border-radius: 40px;
+                    opacity: 0.7;
                 }
 
              
             }
 
-        @include respond-to(md) {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr); 
-            grid-template-rows: repeat(3, 1fr);  
-            gap: 20px;
-            width: calc(100% - 150px);
-            height: 220px;
-            margin-left: 150px;
-
-            .project__grid--card {
-                width: 100%;  
-                height: 100%;
-              }
-        }    
+  
 
     }
 
@@ -76,15 +78,15 @@
         @include respond-to(md) {
             display: none;
         }
-        position: absolute; 
-        bottom: -100px;
+        position: static; 
+        bottom: 0;
         left: 0px;  
         width: 100%;
         text-align: center;
         font-size: 1.25rem;
         font-weight: 500;
         color: $text-color;
-        margin-bottom: 100px;
+        margin-bottom: 20px;
         animation: bounce 3s infinite;
         @keyframes bounce {
             0%, 20%, 50%, 80%, 100% {
