--- a/scss/pages/_about.scss
+++ b/scss/pages/_about.scss
@@ -6,10 +6,10 @@
 .about__container {
     min-height: 100vh;
     width: 100%;
-    margin: 0 auto;
+    margin: 20px;
     scroll-snap-align: start;
     background-color: $background-color;
-    border-left: 3px solid $primary-color;
+    border-left: 2px solid $primary-color;
     
     @include respond-to(md) {
     width: calc(100% - 150px);
@@ -25,6 +25,7 @@
         justify-content: center; 
         width: calc(100% - 50px);
         margin: 20px;
+        
         font-family: $base-font-family;
         color: $text-color;
 
@@ -46,6 +47,7 @@
                 width: 100%;
                 height: 300px;
                 object-fit: cover;
+                // object-position: 100% 100%;
                 border-radius: 20px;
                 opacity: 0.8;
                 filter: saturate(0.6);
