--- a/scss/pages/_about.scss
+++ b/scss/pages/_about.scss
@@ -36,7 +36,7 @@
             flex-shrink: 1;
             flex-wrap: nowrap;
             position: relative;
-            width: 100%;
+            width: 75vw;
             margin-top: 50px;
             margin-bottom: 20px;
             @include respond-to(md){
@@ -46,8 +46,9 @@
             img {
                 width: 100%;
                 height: 300px;
+                
                 object-fit: cover;
-                // object-position: 100% 100%;
+                object-position: 100% 10%;
                 border-radius: 20px;
                 opacity: 0.8;
                 filter: saturate(0.6);
@@ -63,7 +64,7 @@
                 font-weight: 500;
                 margin: 0; 
                 padding: 10px; 
-                max-width: 75%;
+                max-width: 75vw;
                 
             }
 
@@ -88,11 +89,10 @@
         }
         
         p {
-            width: 100%;
+            max-width: 75vw;
             text-align: justify;
-            font-size: 1.4rem;
+            font-size: 1.2rem;
             font-weight: 400;
-            padding: 10px;
             margin-bottom: 20px;  
         }
       
